# hddfancontrol

./: .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  clippy.toml  hdd_fancontrol.py  release  requirements.txt  setup.py  update-version
.github/workflows/: ci.yml  release.yml  security-audit.yml
hddfancontrol/: __init__.py  __main__.py  bin_dep.py  colored_logging.py
openrc/: hddfancontrol
scripts/: plot-temps.py
src/: cl.rs  exit.rs  extras.rs  fan.rs  main.rs  pwm.rs  sysfs.rs  temp_log.rs  tests.rs
src/device/: cpu.rs  drive.rs  hwmon.rs  mod.rs
src/fan/: cmd_fan.rs  mod.rs  pwm_fan.rs
src/probe/: drivetemp.rs  hddtemp.rs  hdparm.rs  mod.rs  sglogs.rs  smartctl.rs
systemd/: hddfancontrol.conf  hddfancontrol.service
tests/: __init__.py
