[package]
name = "hddfancontrol"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.79", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.4.18", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive"] }
clap-num = { version = "1.1.1", default-features = false }
humantime = { version = "2.1.0", default-features = false }
int-enum = { version = "1.0.0", default-features = false }
log = { version = "0.4.20", default-features = false, features = ["max_level_trace", "release_max_level_debug"] }
nix = { version = "0.27.1", default-features = false, features = ["fs"] }
simple_logger = { version = "4.3.3", default-features = false, features = ["colors", "stderr"] }
strum = { version = "0.26.1", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
tempfile = { version = "3.9.0", default-features = false }

[lints.rust]
missing_docs = "warn"
# unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
pedantic = "warn"
# from clippy::restrictions
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
expect_used = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_to_string = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
